# dealcloser-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dealcloser/: __init__.py  app.py  generator.py  main.py
src/dealcloser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dealcloser/data/: icp_example.yaml  offer_example.yaml
src/dealcloser/templates/: email.j2  index.html  instagram_dm.j2  instruction.j2  linkedin.j2  result.html  telegram.j2
src/dealcloser/web_templates/: index.html  result.html
tests/: test_openai.py
