[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dealcloser"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0",
  "jinja2>=3.1.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "gunicorn>=22.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

